--- a/android/client-android/app/src/main/res/layout/activity_recover_password.xml
+++ b/android/client-android/app/src/main/res/layout/activity_recover_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginPage">
+    tools:context=".RecoverPassword">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -38,7 +38,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/login_title"
+                        android:text="@string/password_recovery"
                         android:layout_marginStart="45dp"
                         android:textAppearance="?attr/textAppearanceHeadline6"
                         />
@@ -61,7 +61,7 @@
                         app:boxStrokeColor="@color/colorPrimaryDark"
                         android:textColorHint="@color/colorPrimaryDark"
                         app:hintTextColor="@color/colorPrimaryDark"
-                        android:hint="@string/user_field"
+                        android:hint="@string/email_address_field"
 
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
@@ -72,25 +72,7 @@
                             />
 
                     </com.google.android.material.textfield.TextInputLayout>
-                    <com.google.android.material.textfield.TextInputLayout
 
-                        android:layout_width="350dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginBottom="15dp"
-                        app:boxStrokeColor="@color/colorPrimaryDark"
-                        android:hint="@string/pass_field"
-                        app:startIconTint="@color/colorPrimaryDark"
-                        app:hintTextColor="@color/colorPrimaryDark"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/passField"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            />
-
-                    </com.google.android.material.textfield.TextInputLayout>
 
 
                 </LinearLayout>
@@ -101,12 +83,21 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/loginButton"
-                        android:layout_width="350dp"
+                        android:id="@+id/buttonRecoverySend"
+                        android:layout_width="120dp"
                         android:layout_height="55dp"
                         android:layout_marginStart="25dp"
-                        android:onClick="initLoginButton"
-                        android:text="@string/login_button"
+                        android:text="@string/send_button"
+                        android:textColor="@color/buttonsMain"
+                        android:textStyle="bold"
+                        app:backgroundTint="@color/colorPrimaryDark"
+                        app:cornerRadius="?attr/dialogPreferredPadding" />
+                    <Button
+                        android:id="@+id/buttonRecoveryCancel"
+                        android:layout_width="120dp"
+                        android:layout_height="55dp"
+                        android:layout_marginStart="110dp"
+                        android:text="@string/cancel_button"
                         android:textColor="@color/buttonsMain"
                         android:textStyle="bold"
                         app:backgroundTint="@color/colorPrimaryDark"
@@ -117,24 +108,19 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:orientation="horizontal">
-                    <com.google.android.material.button.MaterialButton
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/no_count"
-                        android:textColor="@color/colorPrimaryDark"
-                        style="?attr/borderlessButtonStyle"
-                        />
-                    <com.google.android.material.button.MaterialButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/forgot_password"
-                        android:textColor="@color/colorPrimaryDark"
-                        style="?attr/borderlessButtonStyle"
-                        />
+                        android:paddingTop="7dp"
+                        android:textAlignment="center"
+                        android:text="@string/password_recovery_message"
+                        android:textSize="20dp"
+                        >
+
+                    </TextView>
                 </LinearLayout>
             </LinearLayout>
 
         </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
