mutation in android client ok

--- a/android/client-android/app/src/main/res/layout/activity_login_page.xml
+++ b/android/client-android/app/src/main/res/layout/activity_login_page.xml
@@ -117,20 +117,24 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:orientation="horizontal">
+
                     <com.google.android.material.button.MaterialButton
+                        android:id="@+id/createAccountButton"
+                        style="?attr/borderlessButtonStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:onClick="onClickCreateAccountButton"
                         android:text="@string/no_count"
-                        android:textColor="@color/colorPrimaryDark"
-                        style="?attr/borderlessButtonStyle"
-                        />
+                        android:textColor="@color/colorPrimaryDark" />
+
                     <com.google.android.material.button.MaterialButton
+                        android:id="@+id/forgotPasswordButton"
+                        style="?attr/borderlessButtonStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:onClick="onClickForgotPassword"
                         android:text="@string/forgot_password"
-                        android:textColor="@color/colorPrimaryDark"
-                        style="?attr/borderlessButtonStyle"
-                        />
+                        android:textColor="@color/colorPrimaryDark" />
                 </LinearLayout>
             </LinearLayout>
 
