--- a/android/client-android/app/src/main/res/layout/activity_main.xml
+++ b/android/client-android/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="83dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="240dp"
+        android:layout_marginBottom="194dp"
+        android:onClick="onTestButton"
+        android:text="test"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonTest" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
