--- a/android/client-android/app/src/main/res/layout/activity_login_page.xml
+++ b/android/client-android/app/src/main/res/layout/activity_login_page.xml
@@ -87,6 +87,7 @@
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/passField"
                             android:layout_width="match_parent"
+                            android:inputType="textPassword"
                             android:layout_height="wrap_content"
                             />
 
