--- a/android/client-android/app/src/main/res/layout/activity_recover_password.xml
+++ b/android/client-android/app/src/main/res/layout/activity_recover_password.xml
@@ -61,15 +61,14 @@
                         app:boxStrokeColor="@color/colorPrimaryDark"
                         android:textColorHint="@color/colorPrimaryDark"
                         app:hintTextColor="@color/colorPrimaryDark"
-                        android:hint="@string/email_address_field"
+                        android:hint="@string/credentials"
 
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/userField"
+                            android:id="@+id/credentialRecoverField"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            />
+                            android:layout_height="49dp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -87,16 +86,19 @@
                         android:layout_width="120dp"
                         android:layout_height="55dp"
                         android:layout_marginStart="25dp"
+                        android:onClick="onRecoverPassword"
                         android:text="@string/send_button"
                         android:textColor="@color/buttonsMain"
                         android:textStyle="bold"
                         app:backgroundTint="@color/colorPrimaryDark"
                         app:cornerRadius="?attr/dialogPreferredPadding" />
+
                     <Button
                         android:id="@+id/buttonRecoveryCancel"
                         android:layout_width="120dp"
                         android:layout_height="55dp"
                         android:layout_marginStart="110dp"
+                        android:onClick="onCancelButton"
                         android:text="@string/cancel_button"
                         android:textColor="@color/buttonsMain"
                         android:textStyle="bold"
@@ -112,7 +114,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="7dp"
-                        android:textAlignment="center"
+
                         android:text="@string/password_recovery_message"
                         android:textSize="20dp"
                         >
