--- a/android/client-android/app/src/main/res/layout/activity_edit_profile.xml
+++ b/android/client-android/app/src/main/res/layout/activity_edit_profile.xml
@@ -8,7 +8,7 @@
     android:layout_marginEnd="2dp"
     android:orientation="vertical"
     android:fillViewport="true"
-    tools:context=".Signup">
+    tools:context=".EditProfile">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,9 +24,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
-                <!-- Media -->
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -66,7 +63,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/credentials"
+                    android:id="@+id/credentialsEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
@@ -81,7 +78,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/names"
+                    android:id="@+id/namesEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
@@ -96,7 +93,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/lastname"
+                    android:id="@+id/lastnameEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
@@ -112,7 +109,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/emailField"
+                    android:id="@+id/emailFieldEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
@@ -129,31 +126,11 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/phoneNumber"
+                    android:id="@+id/phoneNumberEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number"
                     />
-
-            </com.google.android.material.textfield.TextInputLayout>
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:hint="@string/phonenumber_field"
-
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-                <Spinner
-                    android:id="@+id/departmentName"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp">
-
-                </Spinner>
-                <!--<com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="number"
-                    />-->
 
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
@@ -166,7 +143,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/usernameField"
+                    android:id="@+id/usernameFieldEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
@@ -178,12 +155,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
                 android:hint="@string/password_field"
-                
+
 
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/passWord"
+                    android:id="@+id/passWordEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
@@ -219,7 +196,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="55dp"
                     android:layout_marginStart="25dp"
-                    android:onClick="saveButtonNewEmployee"
+                    android:onClick="editProfile"
                     android:text="@string/save_button"
                     android:textColor="@color/buttonsMain"
                     android:textStyle="bold"
@@ -231,7 +208,7 @@
                     android:layout_width="150dp"
                     android:layout_height="55dp"
                     android:layout_marginStart="55dp"
-                    android:onClick="onCancelButton"
+                    android:onClick="cancelEdit"
                     android:text="@string/cancel_button"
                     android:textColor="@color/buttonsMain"
                     android:textStyle="bold"
